# netbox_plugin_gpon

./: .gitignore  README.md  pyproject.toml  setup.py  tasks.py
development/: Dockerfile  base_configuration.py  docker-compose.yml
netbox_plugin_gpon/: __init__.py  admin.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_plugin_gpon.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
netbox_plugin_gpon/migrations/: 0001_initial.py  0002_ispactivedevice_ispdevice_olt.py  0003_auto_20210726_0202.py  0004_ont.py  0005_alter_ispdevice_uuid.py  0006_remove_ispdevice_uuid.py
netbox_plugin_gpon/netbox_plugin_gpon/utilities/: tables.py
netbox_plugin_gpon/netbox_plugin_gpon/views/: generic.py
netbox_plugin_gpon/templates/netbox_plugin_gpon/: home.html  olt.html
netbox_plugin_gpon/templates/netbox_plugin_gpon/generic/: object_edit.html  object_list.html
netbox_plugin_gpon/templatetags/: plugin_extras.py
